RESOLVED FIXED23442
Structure property table deleted offset maps are being leaked.
https://bugs.webkit.org/show_bug.cgi?id=23442
Summary Structure property table deleted offset maps are being leaked.
Gavin Barraclough
Reported 2009-01-20 17:30:50 PST
Probably shouldn't be doing that.
Attachments
The patch (1.01 KB, patch)
2009-01-20 17:34 PST, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2009-01-20 17:34:16 PST
Created attachment 26879 [details] The patch
Oliver Hunt
Comment 2 2009-01-20 17:52:43 PST
Comment on attachment 26879 [details] The patch r-, i think PropertyMapHashTable::deletedOffsets and m_propertyTable should both just be OwnPtrs so we don't need to explicitly free them
Oliver Hunt
Comment 3 2009-01-20 17:53:29 PST
Comment on attachment 26879 [details] The patch r=me, i take that back, i see why they're not now
Gavin Barraclough
Comment 4 2009-01-20 17:54:02 PST
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/runtime/Structure.cpp Transmitting file data .. Committed revision 40076.
Gavin Barraclough
Comment 5 2009-01-20 17:55:09 PST
Erm, r=me from bdash in channel, r+ on bug by Oliver... so, reviewed by both!
David Kilzer (:ddkilzer)
Comment 6 2009-01-20 18:16:54 PST
Note You need to log in before you can comment on or make changes to this bug.