2009-01-20  Gavin Barraclough  <barraclough@apple.com>

Reviewed by Mark Rowe.

        Structure property table deleted offset maps are being leaked.
        Probably shouldn't be doing that.

        https://bugs.webkit.org/show_bug.cgi?id=23442

        * runtime/Structure.cpp:
        (JSC::Structure::~Structure):



Canonical link: https://commits.webkit.org/32272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40076 268f45cc-cd09-0410-ab3c-d52691b4dbfc